# agent-test

./: .features_msaf_tmp.json  .gitignore  .kilocodeignore  Dockerfile  Dockerfile.ubuntu24  Dockerfile.ubuntu24-rocm  README.md  docker-compose.ubuntu24.yaml  docker-compose.yaml  example.env  pyproject.toml  users.json  users_example.json
app/: __init__.py  alignment_service.py  ass_generator.py  bot_app.py  chorus_detector.py  config.py  config_watcher.py  correct_transcript_service.py  demucs_service.py  handlers_karaoke.py  llm_client.py  lyrics_service.py  main.py  models.py  pipeline.py  segment_change_service.py  speeches_client.py  track_visualizer.py  utils.py  video_renderer.py  vocal_processor.py  yandex_music_downloader.py  youtube_downloader.py
cr-promts/: 1. create_vision_promt.md  3. create_task_list.md  4. task_execute_1.md  5. task_iteration_2.md  6. task_iteration_corrrect.md  create_idea_promt.md  create_rules_promt.md
data_exapmles/: state.json  А-Студио - Каменный город_corrected.json  А-Студио - Каменный город_lyrics.txt  А-Студио - Каменный город_transcription.json  Полина Гагарина - Shallow.aligned.json  Полина Гагарина - Shallow.ass  Полина Гагарина - Shallow_transcription.json
docs/: ADR-001. UV_vs_Conda.md  ADR-002. CPU_only_no_GPU.md  ADR-003. FFmpeg_8.0_Priority.md  align.md  align_flowchart.md  bot_commands.md  chorus_detector_analysis.md  docker-ubuntu24.md  ffmpeg-comparison.md  idea.md  run_all_backends_dataflow.md  run_all_backends_dependencies.md  tasklist.md  uv_vs_conda_analysis.md  vision.md
examples/: json_to_seg_word_srt.py
(+61 files in other folders)
