[project]
name = "karaoke-telegram-bot"
version = "0.1.0"
description = "Telegram-бот для генерации караоке-видео по аудио/ссылкам"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "rabdalov" }
]

dependencies = [
  "aiogram>=3.0.0,<4.0.0",
  "httpx>=0.28.1",
  "pydantic>=2.0.0,<3.0.0",
]

[tool.uv]
dev-dependencies = [
  "ruff",
]

